--- a/biblioteca.conf
+++ b/biblioteca.conf
@@ -8,7 +8,7 @@
 	# However, you must set it for any further virtual host explicitly.
 	ServerName www.biblioteca.unam.mx
 
-	ServerAdmin luisbta1998@gmail.com
+	ServerAdmin Demian.cadena.dc@localhost.local
 	DocumentRoot /var/www/biblioteca
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
